fix page-wrapper, disable page overflow

--- a/styles/_app-box.scss
+++ b/styles/_app-box.scss
@@ -1,3 +1,3 @@
-.app {
+.app-box {
   background: $gray;
 }
